--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('./base/_forms.scss');
 
 * {
 	margin: 0;
@@ -15,4 +16,20 @@ body {
 	background: #fff;
 	font-family: 'Roboto', sans-serif;
 	font-size: 1rem;
+	font-weight: 400;
+}
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+a,
+button {
+	cursor: pointer;
+
+	&:focus {
+		outline: none;
+	}
 }
